--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -14,6 +14,7 @@
     margin-right: 0.25rem; /* 20px -> 1.25rem */
     margin-top: 0.25rem; /* 20px -> 1.25rem */
     position: fixed;
+    max-width: calc(100vw - 0.5rem); /* Prevents margin overflow */
   }
 
   .mob-right-nav {
@@ -26,13 +27,19 @@
     width: 50%;
     z-index: 2;
     transform: translateX(100%);
+    will-change: transform; /* Optimize rendering */
+    overflow-x: hidden;
     transition: transform 0.5s ease-in-out;
+
   }
 
   .mob-right-nav ul {
     list-style-type: none;
     padding: 0;
     margin-top: 4rem; /* 4em remains unchanged */
+    width: 90%;
+    max-width: 100vw; /* Prevents it from exceeding the viewport width
+    overflow-x:hidden; */
   }
 
   .mob-right-nav a {
